Add button display to modal summaries

--- a/dischargesummary/templates/dischargesummary/modal_summary.html
+++ b/dischargesummary/templates/dischargesummary/modal_summary.html
@@ -1,6 +1,6 @@
 {% extends 'modal_base.html' %}
 {% block icon %}<i class="fa fa-envelope"></i>{% endblock %}
-{% block title %}Discharge Summary{% endblock %}
+{% block title %} {{ heading }} {% endblock %}
 {% block modal_body %}
 {% include content %}
 {% endblock %}
