Don't get people's hopes up about copying to the clipboard

--- a/dischargesummary/templates/dischargesummary/modal_summary.html
+++ b/dischargesummary/templates/dischargesummary/modal_summary.html
@@ -6,9 +6,9 @@
 {% endblock %}
 
 {% block modal_save %}
-  <button class="btn btn-primary" ng-click="">
-    <i class="fa fa-copy"></i>
-    Copy to Clipboard
-  </button>
+  <!-- <button class="btn btn-primary" ng-click=""> -->
+  <!--   <i class="fa fa-copy"></i> -->
+  <!--   Copy to Clipboard -->
+  <!-- </button> -->
 {% endblock %}
 {% block modal_another %}{% endblock %}
