change the buttons to large, go big or go home

--- a/dischargesummary/templates/modal_summary_action.html
+++ b/dischargesummary/templates/modal_summary_action.html
@@ -1,4 +1,4 @@
-<button class="btn btn-primary" ng-click="open_modal('ModalDischargeSummaryCtrl', '/dischargesummary/modals/{{ name }}/', 'lg', {episode: episode})">
+<button class="btn btn-primary btn-lg" ng-click="open_modal('ModalDischargeSummaryCtrl', '/dischargesummary/modals/{{ name }}/', 'lg', {episode: episode})">
   <i class="fa fa-envelope-o"></i>
   {{ button_display }}
-</button>    
+</button>
