--- a/dischargesummary/templates/dischargesummary/modal_summary.html
+++ b/dischargesummary/templates/dischargesummary/modal_summary.html
@@ -2,13 +2,16 @@
 {% block icon %}<i class="fa fa-envelope"></i>{% endblock %}
 {% block title %} {{ heading }} {% endblock %}
 {% block modal_body %}
-{% include content %}
+{# this gets used by the copy directive #}
+<div id="dischargecontent">
+  {% include content %}
+</div>
 {% endblock %}
 
 {% block modal_save %}
-  <!-- <button class="btn btn-primary" ng-click=""> -->
-  <!--   <i class="fa fa-copy"></i> -->
-  <!--   Copy to Clipboard -->
-  <!-- </button> -->
+  <button class="btn btn-primary" clipboard data-clipboard-target="#dischargecontent">
+    <i class="fa fa-clipboard"></i>
+   Copy to Clipboard
+  </button>
 {% endblock %}
 {% block modal_another %}{% endblock %}
