--- a/dischargesummary/templates/dischargesummary/modal_summary.html
+++ b/dischargesummary/templates/dischargesummary/modal_summary.html
@@ -1,4 +1,4 @@
-{% extends 'modal_base.html' %}
+{% extends 'base_templates/modal_base.html' %}
 {% block icon %}<i class="fa fa-envelope"></i>{% endblock %}
 {% block title %} {{ heading }} {% endblock %}
 {% block modal_body %}
